# SmoothLifeExample

./: CMakeLists.txt  config.yml  visualise.py  visualise_binary.py  visualise_single_xdr.py  visualise_text.py  visualise_xdr.py
deploy/: legion.py  legion.sh.mko
src/: BinaryWriter.cpp  CMakeLists.txt  ParallelWriter.cpp  SingleWriter.cpp  Smooth.cpp  Smooth.h  SmoothWriter.cpp  SmoothWriter.h  TextWriter.cpp  TextWriter.h  XdrWriter.cpp  main.cpp  parallel_main.cpp
test/: CMakeLists.txt  catch.cpp  catch_mpi.cpp
